# badge2022

./: .gitmodules  CMakeLists.txt  README.md  SIMULATOR_INTRO.md  pico_sdk_import.cmake
python/: app.py  main.py  menu.py
python/apps/: c_apps.py  snake.py
source/: main.c  micropython.cmake
source/apps/: CMakeLists.txt  about_badge.c  badge-app-template.c  badge-app-template.h  badge_monsters.c  blinkenlights.c  blinkenlights.h  conductor.c  conductor.h  cube.c  game_of_life.c  ghost-detector.c  ghost-detector.h  hacking_simulator.c  hanabi.c  hanabi.h  lunarlander.c  lunarlander.h  maze.c  maze.h  micropython.c  micropython.cmake  qc.c  qc.h  sample_app.c  smashout.c  smashout.h  spacetripper.c  test_flair_led.c  username.c
source/core/: menu.c  menu.h  settings.c
source/display/: assetList.c  assetList_micropython.c  framebuffer.c  framebuffer.h  micropython.c  micropython.cmake
source/hal/: button.h  button_rp2040.c  button_sim.c  flash_storage_rp2040.c  hal.h  init_rp2040.c  ir_rp2040.c  micropython.c  micropython.cmake  rtc.h  rtc_rp2040.c  rtc_sim.c
